--- a/style.css
+++ b/style.css
@@ -13,11 +13,10 @@ body {
 .hero::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background-image: url(img/bg1.jpg);
+  background-color: white;
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -26,6 +25,7 @@ body {
 .hero {
   min-height: 100vh;
   font-size: 1.6rem;
+  transform: rotate();
 }
 
 .hero h1 {
@@ -33,7 +33,7 @@ body {
 }
 
 .hero h4 {
-  color: #666;
+  color: #252525;
 }
 
 .hero h1 {
@@ -43,7 +43,7 @@ body {
 
 .hero p {
   font-size: 1.4rem;
-  color: #666;
+  color: #252525;
 }
 
 .hero a {
@@ -83,7 +83,7 @@ body {
   background-size: cover;
   min-height: 100vh;
   margin-top: -5rem;
-  color: #666;
+  color: #252525;
   padding-top: 10rem;
 }
 
@@ -100,7 +100,7 @@ body {
   margin-bottom: 3rem;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
-  color: #666;
+  color: #252525;
 }
 
 .home .mempelai h1 {
@@ -124,11 +124,12 @@ body {
 .info,
 .rsvp {
   /* background-image: url(img/bg2opct.png); */
+  background-image: url(img/Texture1.png);
   background-color: #3f70581f;
   background-size: cover;
   padding-top: 10rem;
   padding-bottom: 10rem;
-  color: #666;
+  color: #252525;
 }
 
 .info h2,
@@ -190,7 +191,7 @@ body {
 .gifts {
   background-image: url(img/bg2opct.png);
   background-size: cover;
-  color: #666;
+  color: #252525;
   padding-top: 10rem;
   padding-bottom: 10rem;
 }
@@ -320,6 +321,7 @@ footer a {
   .home p,
   .info p,
   .info .card-header,
+  .info span,
   .rsvp p,
   .gifts p,
   .family h4 {
@@ -327,7 +329,6 @@ footer a {
   }
 
   .info a,
-  .info span,
   .info .btn,
   .rsvp label,
   .rsvp input,
