--- a/style.css
+++ b/style.css
@@ -251,6 +251,10 @@ footer a {
 
 section {
   overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 /* Media Query */
