--- a/style.css
+++ b/style.css
@@ -29,10 +29,6 @@ body {
   padding-top: -20px;
 }
 
-.hero h1 {
-  text-shadow: var(--shadow);
-}
-
 .hero h4 {
   color: #252525;
 }
@@ -40,6 +36,8 @@ body {
 .hero h1 {
   font-family: "Ephesis", cursive;
   font-size: 6rem;
+  text-shadow: var(--shadow);
+  color: #252525;
 }
 
 .hero p {
@@ -100,7 +98,7 @@ body {
 }
 
 .home .mempelai h1 {
-  font-size: 4rem;
+  font-size: 5rem;
   font-family: "Ephesis", cursive;
   font-weight: bold;
   color: var(--hijau);
