--- a/style.css
+++ b/style.css
@@ -26,7 +26,10 @@ body {
   min-height: 100vh;
   font-size: 1.6rem;
   transform: rotate();
-  padding-top: -20px;
+}
+
+.hero h1 {
+  text-shadow: var(--shadow);
 }
 
 .hero h4 {
@@ -36,8 +39,6 @@ body {
 .hero h1 {
   font-family: "Ephesis", cursive;
   font-size: 6rem;
-  text-shadow: var(--shadow);
-  color: #252525;
 }
 
 .hero p {
@@ -61,6 +62,10 @@ body {
   padding: 0rem 5rem;
 }
 
+.mynavbar .offcanvas {
+  height: 100vh;
+}
+
 .mynavbar .navbar-brand,
 .mynavbar .offcanvas-title {
   font-family: "Ephesis", cursive;
@@ -79,6 +84,7 @@ body {
   min-height: 100vh;
   margin-top: -5rem;
   color: #252525;
+  padding-top: 10rem;
 }
 
 .home h5 {
@@ -98,7 +104,7 @@ body {
 }
 
 .home .mempelai h1 {
-  font-size: 5rem;
+  font-size: 4rem;
   font-family: "Ephesis", cursive;
   font-weight: bold;
   color: var(--hijau);
@@ -247,16 +253,16 @@ footer a {
   line-height: 0;
 }
 
-section {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+@keyframes rotating {
+  form {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /* Media Query */
-
 /* Laptop */
 @media (max-width: 992px) {
   html {
@@ -287,9 +293,17 @@ section {
     text-align: center;
   }
 
+  .sticky-top {
+    overflow: hidden;
+  }
+
   .info .card-body .pemisah {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+  }
+
+  section {
+    overflow: auto;
   }
 }
 
