--- a/style.css
+++ b/style.css
@@ -298,6 +298,10 @@ section {
     font-size: 1.5rem;
   }
 
+  .mempelai h1 {
+    font-size: 3rem;
+  }
+
   .gallery {
     padding-left: 20px;
     padding-right: 20px;
